feat: additional test cases and authorisation in swagger
