# app/swagger/swagger.json
@@ -46,12 +46,20 @@
         "produces": [
           "application/json"
         ],
+        "schema": {
+          "$ref": "#/definitions/register"
+        },
         "responses": {
           "200": {
-            "description": "New user is created",
-            "schema": {
-              "$ref": "#/definitions/register"
-            }
+            "description": "New user is created"
+          },
+          
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
@@ -75,14 +83,181 @@
         "produces": [
           "application/json"
         ],
+        "schema": {
+          "$ref": "#/definitions/login"
+        },
         "responses": {
           "200": {
-            "description": "New login",
+            "description": "New login"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
+    "/read": {
+      "get": {
+        "tags": ["read"],
+        "description": "read user data from system",
+        "parameters": [],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "401": {
+            "description": "Authorisation error"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [{
+            "JWT": []
+        }]
+      }
+    },
+
+    "/read/:{_id}": {
+      "get": {
+        "tags": [
+          "readById"
+        ],
+        "description": "read user data by id from system",
+        "parameters": [
+          {
+            "name": ":_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }
+    },
+    "/update/:{_id}": {
+      "put": {
+        "tags": [
+          "updateById"
+        ],
+        "description": "update user data by id from system",
+        "parameters": [
+          {
+            "name": ":_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "Updated Details",
+            "in": "body",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/login"
+              "$ref": "#/definitions/register"
             }
           }
-        }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }
+    },
+    "/delete/:{_id}": {
+      "delete": {
+        "tags": [
+          "deleteById"
+        ],
+        "description": "delete user data by id from system",
+        "parameters": [
+          {
+            "name": ":_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"    
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+  
+          "404": {
+            "description": "Not found"
+          },
+  
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
       }
     }
   },
@@ -117,6 +292,13 @@
         "type": "string"
         }
       }
+    } 
+  },
+  "securityDefinitions" : {
+    "JWT" : {
+      "type": "apiKey",
+      "name": "token",
+      "in": "header"
     }
   }
 }
